[FIX] portal, website: allow to use wide brand logo
When the user chose a very wide logo for the website navbar, it
overflew over the menu items (making the "+" feature look broken).
This in fact occurs since commit https://github.com/odoo/odoo/commit/4bc79da943c71e762e1f6dedbe3a641042bfef3f.
Its goal was to avoid top menu flickering due to that "+" button
feature. To do that, menu items were hidden with an height of 0 during
loading, then, once the correct number of items needed for the "+"
feature was computed, they were made visible to the user. Another
problem was due to the logo image loading. When it is not loaded yet, we
cannot properly compute the number of items which is needed. To solve
that problem, we fixed the size of the image container instead of
setting the height of the image itself.

But fixing the size of the image container only created a new bug: very
wide logos overflow this container. This commit solves all the problems:

1) The height of the image is set to be equal to the navbar links.
2) The height of the navbar is not forced, meaning that if the user
   decides to change the height of its logo to go against (1),
   everything will be adapted accordingly.
3) During loading, the menu items are still 0px tall, hidden and made
   visible once the "+" feature is enabled.
4) The "+" feature is only enabled once all the navbar images have been
   successfully loaded.

task-1878245

--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -21,12 +21,6 @@ $o-portal-table-td-pb: map-get($spacers, 1) !default; // bts4 pb-1
 $o-portal-bg: true; // Enable/Disable page custom bg.
 $o-portal-bg-color: desaturate($gray-200, 100%);
 
-// Resize and vertically align navbar’s items relative to navbar
-@mixin o-w-fill-navbar($ratio: 1) {
-    height: round($-navbar-height * $ratio * 100) / 100;
-    margin-top: round($-navbar-height * (1 - $ratio) / 2 * 100) / 100;
-}
-
 // Frontend general
 #wrapwrap {
     position: relative;
@@ -48,17 +42,12 @@ header {
         flex: 0 0 auto;
 
         &.logo {
-            // Width and height are fixed to prevent navbar flickering due to
-            // image loading
-            width: 4 * $-navbar-height;
-            height: $-navbar-height;
-
             padding-top: 0;
             padding-bottom: 0;
 
             img {
-                @include o-w-fill-navbar;
                 width: auto;
+                height: $-navbar-height;
                 max-width: none;
             }
         }
@@ -73,7 +62,7 @@ header {
     ul.nav > li {
         &.divider {
             display: none;
-            @include o-w-fill-navbar;
+            height: $-navbar-height;
             border-right: 1px solid $nav-divider-color;
         }
 
